2001-01-26  Lars Wirzenius  <liw@iki.fi>

	* gwlib/octstr.[ch], gw/smsbox.c: Killed the almost-unused
	function octstr_replace and converted the only place it was
	being used anymore to create a new Octstr instead.

2001-01-26  Lars Wirzenius  <liw@iki.fi>

	* AUTHORS, ChangeLog, NEWS, checks/check_fakesmsc.sh,
	checks/check_fakewap.sh, checks/check_sendsms.sh,
	checks/check_smpp.sh, doc/arch/arch.xml, gw/bb_smscconn.c,
	gw/bearerbox,.c gw/smsbox.c, gw/smsc.c gw/urltrans.[ch],
	gw/wapbox.c, gwlib/http.c, gwlib/octstr. test/drive_smpp.c,
	test/test_http.c, test/test_octstr_format.c: Edited some long
	lines to be shorter than 80 characters. There's still lots
	more, find them with utils/find-long-lines.

2001-01-26  Lars Wirzenius  <liw@iki.fi>

	* gw/alt_charsets.h, gw/bb.h, gwlib/accesslog.h, gwlib/gwlib.h,
	gwlib/gwmem.h, gwlib/socket.h, gwlib/utils.h, test/decompile.h,
	utils/OTAbitmap.h, utils/wbmp.h: Removed leading underscore from
	symbols. It is reserved to the C implementation and is not to
	be used by application code.
	
	* gwlib/socket.[ch]: Removed unused functions socket_query_blocking,
	read_line, and read_to_eof.
	
	* gwlib/utils.[ch]: Removed unused function print_std_args_usage.
	
	* gwlib/gw_inet.[ch], gw/wap_push_ota.c: Removed the (unused)
	gw_inet_ntop wrapper.

2001-01-26  Lars Wirzenius  <liw@iki.fi>

	* doc/userguide/userguide.xml: Documented the "phone" option in
	EMI over modem.

2001-01-26  Lars Wirzenius  <liw@iki.fi>

	* The standard library function inet_ntoa is not thread safe.
	Instead of writing a wrapper, I decided it's better to convert
	to using the gw_netaddr_to_octstr implementation Derek Hamilton
	wrote for us.
	
    	* gwlib/protected.h: Added a macro to trap inet_ntoa calls.
	
	* gw/smsc_ois.c, gwlib/socket.c, test/test_cimd2.c: Converted
	use of inet_ntoa to gw_netaddr_to_octstr.
	
	* gwlib/socket.[ch]: Removed the unused function
	socket_get_peer_ip and slighly change the use of whitespace in