@@ -25,10 +25,20 @@ int gw_gethostbyname(struct hostent *ret, const char *name);
 /*
  * Make it harder to use these by mistake.
  */
+
+#undef localtime
 #define localtime(t) do_not_use_localtime_directly
+
+#undef gmtime
 #define gmtime(t) do_not_use_gmtime_directly
+
+#undef rand
 #define rand() do_not_use_rand_directly
+
+#undef gethostbyname
 #define gethostbyname() do_not_use_gethostbyname_directly
+
+#undef inet_ntoa
 #define inet_ntoa(in) use_gw_netaddr_to_octstr_instead_of_inet_ntoa
 
 
